[gd_scene load_steps=26 format=3 uid="uid://d2j7qjoschorp"]

[ext_resource type="Script" path="res://Scenes/Player/LimitedAmmoPlayer.gd" id="3_hdiv3"]
[ext_resource type="PackedScene" uid="uid://b8yrfir2621jt" path="res://Scenes/Enemy/enemy.tscn" id="3_wpixk"]
[ext_resource type="PackedScene" uid="uid://bru6ysxn1me4l" path="res://Scenes/Player/PlayerBlastControl2/playerBlastControl2.tscn" id="4_etgme"]
[ext_resource type="PackedScene" uid="uid://52attaykg0eq" path="res://Scenes/Target/Target.tscn" id="5_4of6h"]
[ext_resource type="Script" path="res://levels/Sector1.gd" id="6_jsb2r"]
[ext_resource type="PackedScene" uid="uid://fn3g7p4oqlet" path="res://Scenes/UI/health.tscn" id="8_8hwkr"]
[ext_resource type="Script" path="res://Scenes/WorldBuilding/Door.gd" id="8_mhw8h"]
[ext_resource type="PackedScene" uid="uid://dqkf1y32m634r" path="res://Scenes/WorldBuilding/Floor.tscn" id="8_xy1w5"]
[ext_resource type="PackedScene" uid="uid://beytfaju82csg" path="res://Scenes/WorldBuilding/Buildings/BasicRoom.tscn" id="9_fxnbq"]
[ext_resource type="PackedScene" uid="uid://chpkklg8cwdxq" path="res://Scenes/WorldBuilding/Door.tscn" id="9_yis3m"]
[ext_resource type="Script" path="res://levels/Ammo.gd" id="10_0afud"]
[ext_resource type="PackedScene" uid="uid://boaew7c7m12jx" path="res://Scenes/WorldBuilding/WallThin.tscn" id="10_1vm0a"]
[ext_resource type="PackedScene" uid="uid://co4fu3b1g0efi" path="res://Scenes/WorldBuilding/Corridor.tscn" id="10_4acjy"]
[ext_resource type="PackedScene" uid="uid://hv7st8vce7xw" path="res://Scenes/Target/MovingTarget/MovingTarget.tscn" id="12_m2e6e"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_6g5uc"]

[sub_resource type="Sky" id="Sky_ivwug"]
sky_material = SubResource("ProceduralSkyMaterial_6g5uc")

[sub_resource type="Environment" id="Environment_l5pxq"]
background_mode = 2
background_color = Color(0.2139, 0.570975, 0.69, 1)
sky = SubResource("Sky_ivwug")

[sub_resource type="NavigationMesh" id="NavigationMesh_r2k81"]
vertices = PackedVector3Array(0, 0.705, -73.76, 0, 0.705, -75.51, -1.5, 0.705, -76.51, -9, 0.705, -73.76, -24, 0.705, -87.76, -20.25, 0.705, -87.76, -19.25, 0.705, -89.26, -24, 0.705, -94.01, -12, 0.705, -100.26, -17, 0.705, -88.51, -17, 0.705, -87.26, -0.75, 0.705, -78.76, 0, 0.705, -78.76, 0, 0.705, -100.26, -24, 0.705, -94.01, -19.25, 0.705, -89.26, -17.75, 0.705, -89.26, -12, 0.705, -100.26, -24, 0.705, -100.26, -12, 0.705, -100.26, -17.75, 0.705, -89.26, -17, 0.705, -88.51, -9, 0.705, -73.76, -1.5, 0.705, -76.51, -1.5, 0.705, -78.01, -9, 0.705, -73.76, -1.5, 0.705, -78.01, -0.75, 0.705, -78.76, -17, 0.705, -87.26, 1.5, 0.705, -76.51, 0, 0.705, -75.51, 0, 0.705, -73.76, 9.25, 0.705, -73.76, 9.25, 0.705, -73.76, 24, 0.705, -78.51, 24, 0.705, -85.76, 12, 0.705, -100.26, 0, 0.705, -100.26, 0.75, 0.705, -78.76, 1.5, 0.705, -78.01, 1.5, 0.705, -76.51, 9.25, 0.705, -73.76, 0.75, 0.705, -78.76, 1.5, 0.705, -78.01, 9.25, 0.705, -73.76, 24, 0.705, -93.01, 24, 0.705, -100.26, 12, 0.705, -100.26, 10, 0.705, -73.01, 10, 0.705, -71.01, 24, 0.705, -71.01, 9.25, 0.705, -73.76, 10, 0.705, -73.01, 24, 0.705, -71.01, 24, 0.705, -78.51, 0, 0.705, -100.26, 0, 0.705, -78.76, 0.75, 0.705, -78.76, 24, 0.705, -85.76, 24, 0.705, -93.01, 12, 0.705, -100.26, -19, 0.705, -86.01, -20.25, 0.705, -87.76, -24, 0.705, -87.76, -24, 0.705, -79.51, -9, 0.705, -73.76, -17, 0.705, -87.26, -18, 0.705, -86.01, -18, 0.705, -86.01, -19, 0.705, -86.01, -24, 0.705, -79.51, -24, 0.705, -71.01, -10, 0.705, -73.01, -9, 0.705, -73.76, -24, 0.705, -71.01, -10, 0.705, -71.01, -10, 0.705, -73.01, -8, 8.205, -71.76, -8, 8.205, -66.26, 0, 8.205, -66.26, 0, 8.205, -71.76, 8, 8.205, -71.76, 0, 8.205, -71.76, 0, 8.205, -66.26, 8, 8.205, -66.26, -7.75, 0.705, -71.51, -7.75, 0.705, -66.51, 0, 0.705, -66.51, 0, 0.705, -71.51, 7.75, 0.705, -71.51, 0, 0.705, -71.51, 0, 0.705, -66.51, 7.75, 0.705, -66.51, -24, 0.705, -67.01, -10, 0.705, -67.01, -10, 0.705, -71.01, -24, 0.705, -71.01, 10, 0.705, -67.01, 24, 0.705, -67.01, 24, 0.705, -71.01, 10, 0.705, -71.01, -24, 0.705, -59.76, -24, 0.705, -52.26, -15.75, 0.705, -52.26, -7.25, 0.705, -52.26, -7.25, 0.705, -64.26, -9.25, 0.705, -64.26, -7.25, 0.705, -52.26, -9.25, 0.705, -64.26, -10, 0.705, -65.01, -15.75, 0.705, -52.26, -10, 0.705, -65.01, -10, 0.705, -67.01, -24, 0.705, -67.01, -24, 0.705, -59.76, -15.75, 0.705, -52.26, 15.5, 0.705, -52.26, 24, 0.705, -52.26, 24, 0.705, -59.76, 9.25, 0.705, -64.26, 7.25, 0.705, -64.26, 7.25, 0.705, -52.26, 10, 0.705, -65.01, 9.25, 0.705, -64.26, 7.25, 0.705, -52.26, 15.5, 0.705, -52.26, 24, 0.705, -67.01, 10, 0.705, -67.01, 10, 0.705, -65.01, 15.5, 0.705, -52.26, 24, 0.705, -59.76, 0, 0.705, -52.26, 7.25, 0.705, -52.26, 7.25, 0.705, -64.26, 0, 0.705, -64.26, 0, 0.705, -64.26, -7.25, 0.705, -64.26, -7.25, 0.705, -52.26, 0, 0.705, -52.26)
polygons = [PackedInt32Array(1, 0, 2), PackedInt32Array(2, 0, 3), PackedInt32Array(5, 4, 6), PackedInt32Array(6, 4, 7), PackedInt32Array(9, 8, 10), PackedInt32Array(10, 8, 13), PackedInt32Array(10, 13, 11), PackedInt32Array(11, 13, 12), PackedInt32Array(15, 14, 16), PackedInt32Array(16, 14, 18), PackedInt32Array(16, 18, 17), PackedInt32Array(21, 20, 19), PackedInt32Array(24, 23, 22), PackedInt32Array(26, 25, 27), PackedInt32Array(27, 25, 28), PackedInt32Array(30, 29, 31), PackedInt32Array(31, 29, 32), PackedInt32Array(34, 33, 35), PackedInt32Array(35, 33, 38), PackedInt32Array(35, 38, 36), PackedInt32Array(36, 38, 37), PackedInt32Array(41, 40, 39), PackedInt32Array(44, 43, 42), PackedInt32Array(47, 46, 45), PackedInt32Array(50, 49, 48), PackedInt32Array(52, 51, 53), PackedInt32Array(53, 51, 54), PackedInt32Array(57, 56, 55), PackedInt32Array(60, 59, 58), PackedInt32Array(62, 61, 63), PackedInt32Array(63, 61, 64), PackedInt32Array(67, 66, 65), PackedInt32Array(69, 68, 70), PackedInt32Array(70, 68, 71), PackedInt32Array(71, 68, 72), PackedInt32Array(72, 68, 73), PackedInt32Array(76, 75, 74), PackedInt32Array(80, 79, 77), PackedInt32Array(77, 79, 78), PackedInt32Array(84, 83, 81), PackedInt32Array(81, 83, 82), PackedInt32Array(88, 87, 85), PackedInt32Array(85, 87, 86), PackedInt32Array(92, 91, 89), PackedInt32Array(89, 91, 90), PackedInt32Array(96, 95, 93), PackedInt32Array(93, 95, 94), PackedInt32Array(100, 99, 97), PackedInt32Array(97, 99, 98), PackedInt32Array(103, 102, 101), PackedInt32Array(106, 105, 104), PackedInt32Array(108, 107, 109), PackedInt32Array(109, 107, 110), PackedInt32Array(112, 111, 113), PackedInt32Array(113, 111, 114), PackedInt32Array(114, 111, 115), PackedInt32Array(118, 117, 116), PackedInt32Array(121, 120, 119), PackedInt32Array(123, 122, 124), PackedInt32Array(124, 122, 125), PackedInt32Array(127, 126, 128), PackedInt32Array(128, 126, 130), PackedInt32Array(128, 130, 129), PackedInt32Array(134, 133, 131), PackedInt32Array(131, 133, 132), PackedInt32Array(138, 137, 135), PackedInt32Array(135, 137, 136)]
agent_radius = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ni65l"]
albedo_color = Color(0.564706, 0.992157, 0.6, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rpkon"]
albedo_color = Color(0.0901961, 1, 1, 1)

[sub_resource type="Curve3D" id="Curve3D_7g4hy"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -18.5477, 0.230309, -10.4911, 0, 0, 0, 0, 0, 0, 17.8226, 0.230309, -13.1775, 0, 0, 0, 0, 0, 0, 16.5827, 0.230309, 19.8863, 0, 0, 0, 0, 0, 0, -19.1676, 0.230309, 19.8863, 0, 0, 0, 0, 0, 0, -18.5477, 0.230309, -10.4911),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[sub_resource type="BoxShape3D" id="BoxShape3D_vjrnw"]
size = Vector3(3.87609, 4.51704, 3.74611)

[sub_resource type="BoxMesh" id="BoxMesh_lvmr2"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xdxoy"]
albedo_color = Color(1, 0.431373, 1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yl1yf"]
albedo_color = Color(0.866667, 0.537255, 0.239216, 1)

[node name="LimitedAmmo" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.11305, -0.230306, 5.07263)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_l5pxq")

[node name="DirectionalLight3d" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.966349, 0.250904, -0.0567091, 0.182362, -0.512743, 0.838951, 0.181419, -0.821061, -0.541244, -0.00693703, 59.5145, -109.348)
light_energy = 1.232
light_indirect_energy = 0.884
light_volumetric_fog_energy = 0.768
shadow_enabled = true

[node name="EnemyTracking" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -58, 0, 0)

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="EnemyTracking"]
navigation_mesh = SubResource("NavigationMesh_r2k81")

[node name="arena" type="CSGBox3D" parent="EnemyTracking/NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -76.26)
material_override = SubResource("StandardMaterial3D_ni65l")
use_collision = true
size = Vector3(50, 0.5, 50)

[node name="wall" type="CSGBox3D" parent="EnemyTracking/NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.7, -69)
material_override = SubResource("StandardMaterial3D_rpkon")
transparency = 0.5
use_collision = true
size = Vector3(17.6, 8.49, 7.32)

[node name="Enemy" parent="EnemyTracking/NavigationRegion3D" instance=ExtResource("3_wpixk")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.644406, -77.231)
collision_mask = 3
map_path = NodePath("../../..")
player_path = NodePath("../../../Player")

[node name="Path3D" type="Path3D" parent="EnemyTracking/NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.644406, -77.231)
curve = SubResource("Curve3D_7g4hy")

[node name="PathFollow3D" type="PathFollow3D" parent="EnemyTracking/NavigationRegion3D/Path3D"]
transform = Transform3D(0.073662, 0, -0.997283, 0, 1, 0, 0.997283, 0, 0.073662, -18.5477, 0.230309, -10.4911)

[node name="Enemy" parent="EnemyTracking/NavigationRegion3D/Path3D/PathFollow3D" instance=ExtResource("3_wpixk")]
collision_mask = 3
map_path = NodePath("../../../../..")
player_path = NodePath("../../../../../Player")

[node name="Player" parent="." instance=ExtResource("4_etgme")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.396631, -2.04207)
script = ExtResource("3_hdiv3")
HP = 4
has_health = true

[node name="HealZone" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11.6461, -1.97351, -23.1792)

[node name="CollisionShape3D" type="CollisionShape3D" parent="HealZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.86073, 0.0616088)
shape = SubResource("BoxShape3D_vjrnw")

[node name="MeshInstance3D" type="MeshInstance3D" parent="HealZone"]
transform = Transform3D(3.75, 0, 0, 0, 3.75, 0, 0, 0, 3.75, 0.0207608, 0.662425, 0.0820637)
mesh = SubResource("BoxMesh_lvmr2")
surface_material_override/0 = SubResource("StandardMaterial3D_xdxoy")

[node name="BulletRefill" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -18.3475, -1.97351, -14.0078)

[node name="CollisionShape3D" type="CollisionShape3D" parent="BulletRefill"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.86073, 0.0616088)
shape = SubResource("BoxShape3D_vjrnw")

[node name="MeshInstance3D" type="MeshInstance3D" parent="BulletRefill"]
transform = Transform3D(3.75, 0, 0, 0, 3.75, 0, 0, 0, 3.75, 0.0207608, 0.662425, 0.0820637)
mesh = SubResource("BoxMesh_lvmr2")
surface_material_override/0 = SubResource("StandardMaterial3D_yl1yf")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Health" parent="UI" instance=ExtResource("8_8hwkr")]
layout_mode = 0
offset_left = 18.0
offset_top = 573.0
offset_right = 200.0
offset_bottom = 631.0
text = "Health : 3"

[node name="Ammo" type="Label" parent="UI"]
layout_mode = 0
offset_left = 916.0
offset_top = 572.0
offset_right = 1145.0
offset_bottom = 624.0
theme_override_font_sizes/font_size = 35
text = "Bullets: 10/10"
script = ExtResource("10_0afud")

[node name="Sector1" type="Node3D" parent="."]
script = ExtResource("6_jsb2r")

[node name="Door" parent="Sector1" instance=ExtResource("9_yis3m")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, -37)
script = ExtResource("8_mhw8h")
animation_speed = 1.8

[node name="Map" type="Node3D" parent="Sector1"]

[node name="WallThin" parent="Sector1/Map" instance=ExtResource("10_1vm0a")]
transform = Transform3D(0.85, 0, 0, 0, 1.5, 0, 0, 0, 1.5, -4, 0, -37)

[node name="WallThin2" parent="Sector1/Map" instance=ExtResource("10_1vm0a")]
transform = Transform3D(0.85, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 4, 0, -37)

[node name="WallThin3" parent="Sector1/Map" instance=ExtResource("10_1vm0a")]
transform = Transform3D(1, 0, 0, 0, 1.5, 0, 0, 0, 1.5, -4, 0, -17)

[node name="WallThin4" parent="Sector1/Map" instance=ExtResource("10_1vm0a")]
transform = Transform3D(1, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 4, 0, -17)

[node name="WallThin5" parent="Sector1/Map" instance=ExtResource("10_1vm0a")]
transform = Transform3D(1, 0, 0, 0, 1.5, 0, 0, 0, 1.5, -4, 0, -10)

[node name="WallThin6" parent="Sector1/Map" instance=ExtResource("10_1vm0a")]
transform = Transform3D(1, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 4, 0, -10)

[node name="Building" parent="Sector1/Map" instance=ExtResource("9_fxnbq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 15.309)

[node name="Corridor" parent="Sector1/Map" instance=ExtResource("10_4acjy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 11.352)

[node name="Corridor2" parent="Sector1/Map" instance=ExtResource("10_4acjy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -11.648)

[node name="Corridor3" parent="Sector1/Map" instance=ExtResource("10_4acjy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -15.648)

[node name="Floor" parent="Sector1/Map" instance=ExtResource("8_xy1w5")]
transform = Transform3D(3, 0, 0, 0, 1, 0, 0, 0, 5, 0, 0, 0)

[node name="Floor2" parent="Sector1/Map" instance=ExtResource("8_xy1w5")]
transform = Transform3D(3, 0, 0, 0, 1, 0, 0, 0, 5, 0, 0, -27)

[node name="Floor3" parent="Sector1/Map" instance=ExtResource("8_xy1w5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, -28)

[node name="Target2" parent="Sector1" instance=ExtResource("5_4of6h")]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, -14, 4, -5)

[node name="Target3" parent="Sector1" instance=ExtResource("5_4of6h")]
transform = Transform3D(-0.5, 0, -0.866025, 0, 1, 0, 0.866025, 0, -0.5, 8, 2, 1)

[node name="MovingTarget2" parent="Sector1" instance=ExtResource("12_m2e6e")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 0, -31)

[node name="MovingTarget3" parent="Sector1" instance=ExtResource("12_m2e6e")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 20, 1, -28)

[node name="Connections" type="Node3D" parent="."]

[node name="Sector12" type="Node3D" parent="Connections"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -49)

[node name="Corridor2" parent="Connections/Sector12" instance=ExtResource("10_4acjy")]
transform = Transform3D(-3.78552e-08, -0.5, -0.866025, -2.18557e-08, 0.866025, -0.5, 1, 0, -4.37114e-08, 8, 1, 0)

[node name="Corridor3" parent="Connections/Sector12" instance=ExtResource("10_4acjy")]
transform = Transform3D(-3.78552e-08, -0.5, -0.866025, -2.18557e-08, 0.866025, -0.5, 1, 0, -4.37114e-08, 11.5, 3, 0)

[node name="Corridor4" parent="Connections/Sector12" instance=ExtResource("10_4acjy")]
transform = Transform3D(-3.78552e-08, -0.5, -0.866025, -2.18557e-08, 0.866025, -0.5, 1, 0, -4.37114e-08, 15, 5, 0)

[node name="Corridor" parent="Connections/Sector12" instance=ExtResource("10_4acjy")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 9)

[node name="Floor" parent="Connections/Sector12" instance=ExtResource("8_xy1w5")]
transform = Transform3D(3, 0, 0, 0, 1, 0, 0, 0, 3, 0, 0, 0)

[node name="Floor2" parent="Connections/Sector12" instance=ExtResource("8_xy1w5")]
transform = Transform3D(3, 0, 0, 0, 1, 0, 0, 0, 3, 22.9, 6, 0)

[connection signal="body_entered" from="HealZone" to="Player" method="_on_heal_zone_body_entered"]
[connection signal="body_entered" from="BulletRefill" to="Player" method="_on_bullet_refill_body_entered"]
[connection signal="hit_signal" from="Sector1/Target2" to="Sector1" method="_on_target_2_hit_signal"]
[connection signal="hit_signal" from="Sector1/Target3" to="Sector1" method="_on_target_3_hit_signal"]
[connection signal="hit_signal" from="Sector1/MovingTarget2" to="Sector1" method="_on_moving_target_2_hit_signal"]
[connection signal="hit_signal" from="Sector1/MovingTarget3" to="Sector1" method="_on_moving_target_3_hit_signal"]
